Fixed About Me nav jump

--- a/htdocs/css/desktop.css
+++ b/htdocs/css/desktop.css
@@ -87,7 +87,7 @@ li {
   padding: 0;
 }
 #Nav ul {
-  font-size: 1.65em;
+  font-size: 1.25em;
   padding: 0;
 }
 #Nav a:hover {
